fix: adjust spacing between message border and drawer - MEED-8526 - Meeds-io/MIPs#163

--- a/webapp/src/main/webapp/css/matrix.less
+++ b/webapp/src/main/webapp/css/matrix.less
@@ -263,7 +263,7 @@
     border: 2px solid #FFF;
   }
   .message-file-name {
-    max-width: 280px !important;
+    max-width: 304px !important;
     &:hover {
       text-decoration: underline;
     }
